# camera_tflit

./: README.md  pubspec.yaml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: yuv2rgb.frag  yuv2rgb.vert
android/app/src/main/cpp/: CMakeLists.txt  yuv2rgb-lib.cpp
android/app/src/main/kotlin/com/example/camera_tflit/: BitmapExtensions.kt  EglFactory.kt  MainActivity.kt  ShaderCode.kt  Shape.kt  TFLiteLandmarkClassifier.kt  Yuv420888Image.kt  Yuv420888ImageAdapter.kt
android/app/src/main/kotlin/com/example/camera_tflit/core/: FboManager.kt  ShaderManager.kt  Yuv2RgbFilter.kt
android/app/src/main/kotlin/com/example/camera_tflit/data/: TFLiteLandmarkClassifier.kt  TFLiteMyImageClassifier.kt
android/app/src/main/kotlin/com/example/camera_tflit/domain/: Classification.kt  LandmarkClassifier.kt  MyImageClassifier.kt
android/render-toolkit/: build.gradle
android/renderscript-toolkit/: build.gradle
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: camera_image_x.dart  custom_image.dart  custom_image_adapter.dart  main.dart  my_image.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+6 files in other folders)
